--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -28,7 +28,7 @@ jobs:
     runs-on: macos-15
     strategy:
       matrix:
-        xcode: ['16.1', '16.2']
+        xcode: ['16.1', '16.2', '16.3', '16.4']
         
     steps:
       - name: Select Xcode version (${{ matrix.xcode }})
@@ -48,10 +48,10 @@ jobs:
     runs-on: macos-15
 
     steps:
-      - name: Select Xcode version (16.3)
+      - name: Select Xcode version (16.4)
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.3'
+          xcode-version: '16.4'
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -65,7 +65,7 @@ jobs:
         run: |
           xcodebuild test \
             -scheme SnapshotsIntegrationTests \
-            -destination "platform=iOS Simulator,name=iPhone 16,OS=18.4"
+            -destination "platform=iOS Simulator,name=iPhone 16,OS=18.6"
 
   macos-unit-tests:
     name: Unit Tests
@@ -73,10 +73,10 @@ jobs:
     runs-on: macos-15
 
     steps:
-      - name: Select Xcode version (16.3)
+      - name: Select Xcode version (16.4)
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.3'
+          xcode-version: '16.4'
 
       - name: Checkout
         uses: actions/checkout@v4
