--- a/.swiftpm/xcode/xcshareddata/xcschemes/swift-snapshot-testing-macros-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/swift-snapshot-testing-macros-Package.xcscheme
@@ -84,6 +84,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "SnapshotsIntegrationRepetitionTests"
+               BuildableName = "SnapshotsIntegrationRepetitionTests"
+               BlueprintName = "SnapshotsIntegrationRepetitionTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
