--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -61,6 +61,11 @@ jobs:
         with:
           ruby-version: '3.1'
 
+      - name: Disable prebuilts
+        run: |
+          defaults write com.apple.dt.Xcode IDEPackageEnablePrebuilts -bool NO
+          defaults read com.apple.dt.Xcode IDEPackageEnablePrebuilts
+
       - name: Run SnapshotsIntegrationTests (iOS)
         run: |
           xcodebuild test \
@@ -85,6 +90,11 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
+
+      - name: Disable prebuilts
+        run: |
+          defaults write com.apple.dt.Xcode IDEPackageEnablePrebuilts -bool NO
+          defaults read com.apple.dt.Xcode IDEPackageEnablePrebuilts
 
       - name: Run SnapshotsIntegrationRepetitionTests (iOS)
         run: |
