--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -28,7 +28,7 @@ jobs:
     runs-on: macos-15
     strategy:
       matrix:
-        xcode: ['16.1', '16.2', '16.3', '16.4']
+        xcode: ['16.1', '16.2', '16.3', '16.4', '26.0']
         
     steps:
       - name: Select Xcode version (${{ matrix.xcode }})
@@ -48,10 +48,10 @@ jobs:
     runs-on: macos-26
 
     steps:
-      - name: Select Xcode version (26.0)
+      - name: Select Xcode version (26.1)
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '26.0'
+          xcode-version: '26.1'
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -70,7 +70,7 @@ jobs:
         run: |
           xcodebuild test \
             -scheme SnapshotsIntegrationTests \
-            -destination "platform=iOS Simulator,name=iPhone 17,OS=26.0.1"
+            -destination "platform=iOS Simulator,name=iPhone 17,OS=26.1"
     
   ios-integration-repetition-tests:
     name: Integration Repetition Tests
@@ -78,10 +78,10 @@ jobs:
     runs-on: macos-26
 
     steps:
-      - name: Select Xcode version (26.0)
+      - name: Select Xcode version (26.1)
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '26.0'
+          xcode-version: '26.1'
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -100,7 +100,7 @@ jobs:
         run: |
           xcodebuild test \
             -scheme SnapshotsIntegrationRepetitionTests \
-            -destination "platform=iOS Simulator,name=iPhone 17,OS=26.0.1"
+            -destination "platform=iOS Simulator,name=iPhone 17,OS=26.1"
 
   macos-unit-tests:
     name: Unit Tests
@@ -108,10 +108,10 @@ jobs:
     runs-on: macos-26
 
     steps:
-      - name: Select Xcode version (26.0)
+      - name: Select Xcode version (26.1)
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '26.0'
+          xcode-version: '26.1'
 
       - name: Checkout
         uses: actions/checkout@v4
